--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "example",
-  "version": "1.0.0",
-  "description": "",
-  "main": "simple.js",
   "scripts": {
-    "start": "node simple.js"
+    "start": "node mock-server.js",
+    "postinstall": "node install/.post-install.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "simple-odata-server": "github:pofider/node-simple-odata-server",
     "simple-odata-server-nedb": "github:pofider/node-simple-odata-server-nedb"
